--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -122,9 +122,6 @@ msgstr ""
 msgid "Activate design"
 msgstr ""
 
-msgid "Activate statute amendments"
-msgstr ""
-
 msgid "Activate the selection field 'motion editor'"
 msgstr ""
 
@@ -603,6 +600,9 @@ msgstr ""
 msgid "Are you sure you want to send an invitation email to the user?"
 msgstr ""
 
+msgid "Are you sure you want to send an invitation email?"
+msgstr ""
+
 msgid "Are you sure you want to send emails to all selected participants?"
 msgstr ""
 
@@ -658,6 +658,9 @@ msgid "Automatically open the web cam for new conference speakers"
 msgstr ""
 
 msgid "Autopilot"
+msgstr ""
+
+msgid "Autopilot widgets"
 msgstr ""
 
 msgid "Autoupdate unhealthy"
@@ -735,10 +738,10 @@ msgstr ""
 msgid "Bold"
 msgstr ""
 
-msgid "CSV export options"
+msgid "CSV import"
 msgstr ""
 
-msgid "CSV import"
+msgid "CSV options"
 msgstr ""
 
 msgid "Calendar"
@@ -897,6 +900,9 @@ msgstr ""
 msgid "Can manage the projector"
 msgstr ""
 
+msgid "Can modify existing participants, but cannot create or delete them."
+msgstr ""
+
 msgid "Can nominate another participant"
 msgstr ""
 
@@ -936,6 +942,9 @@ msgstr ""
 msgid "Can see elections"
 msgstr ""
 
+msgid "Can see email, username and SSO identification of all participants."
+msgstr ""
+
 msgid "Can see files"
 msgstr ""
 
@@ -965,6 +974,9 @@ msgid ""
 msgstr ""
 
 msgid "Can see participants"
+msgstr ""
+
+msgid "Can see sensitive data"
 msgstr ""
 
 msgid "Can see the Agenda menu item and all public topics in the agenda."
@@ -1045,6 +1057,9 @@ msgstr ""
 msgid ""
 "Can support motions. The support function must be enabled in > [Settings] > "
 "[Motions] as well as for the corresponding state in > [Workflow]."
+msgstr ""
+
+msgid "Can update participants"
 msgstr ""
 
 msgid ""
@@ -1166,12 +1181,11 @@ msgstr ""
 msgid "Choose 0 to disable Intervention."
 msgstr ""
 
-msgid "Choose 0 to disable the supporting system."
+msgid ""
+"Choose 0 to disable speaking times widget for structure level countdowns."
 msgstr ""
 
-msgid ""
-"Choose a number greater than 0 to activate speaking times widget for "
-"structure level countdowns."
+msgid "Choose 0 to disable the supporting system."
 msgstr ""
 
 msgid "Chyron background color"
@@ -1420,6 +1434,9 @@ msgstr ""
 msgid "Custom translations"
 msgstr ""
 
+msgid "Customize autopilot"
+msgstr ""
+
 msgid "Dark mode"
 msgstr ""
 
@@ -1438,10 +1455,7 @@ msgstr ""
 msgid "Default"
 msgstr ""
 
-msgid "Default 100 % base of a voting result"
-msgstr ""
-
-msgid "Default 100 % base of an election result"
+msgid "Default 100 % base"
 msgstr ""
 
 msgid "Default election method"
@@ -1459,7 +1473,9 @@ msgstr ""
 msgid "Default line numbering"
 msgstr ""
 
-msgid "Default speaking time for structure levels in seconds"
+msgid ""
+"Default speaking time contingent for parliamentary groups (structure levels) "
+"in seconds"
 msgstr ""
 
 msgid ""
@@ -1724,6 +1740,9 @@ msgstr ""
 msgid "Elections"
 msgstr ""
 
+msgid "Elections (PDF settings)"
+msgstr ""
+
 msgid "Element"
 msgstr ""
 
@@ -1947,6 +1966,9 @@ msgstr ""
 msgid "External ID"
 msgstr ""
 
+msgid "Fallback mode"
+msgstr ""
+
 msgid "Favorites"
 msgstr ""
 
@@ -2005,6 +2027,15 @@ msgid "Font size in pt"
 msgstr ""
 
 msgid ""
+"For activation:<br>\n"
+"                        1. Assign group permission (define the group that "
+"can support motions)<br>\n"
+"                        2. Adjust workflow (define state in which motions "
+"can be supported)<br>\n"
+"                        3. Enter minimum number (see next field)"
+msgstr ""
+
+msgid ""
 "For large instances this may block the server to the point of unusability"
 msgstr ""
 
@@ -2012,6 +2043,9 @@ msgid "Foreground color"
 msgstr ""
 
 msgid "Forgot Password?"
+msgstr ""
+
+msgid "Formalities"
 msgstr ""
 
 msgid "Format"
@@ -2140,6 +2174,9 @@ msgstr ""
 msgid "Has forwardings"
 msgstr ""
 
+msgid "Has identical motions"
+msgstr ""
+
 msgid "Has logged in"
 msgstr ""
 
@@ -2149,10 +2186,16 @@ msgstr ""
 msgid "Has no email address"
 msgstr ""
 
+msgid "Has no identical motions"
+msgstr ""
+
 msgid "Has no speakers"
 msgstr ""
 
 msgid "Has not logged in yet"
+msgstr ""
+
+msgid "Has not spoken"
 msgstr ""
 
 msgid "Has not voted"
@@ -2162,6 +2205,9 @@ msgid "Has notes"
 msgstr ""
 
 msgid "Has speakers"
+msgstr ""
+
+msgid "Has spoken"
 msgstr ""
 
 msgid "Has unchanged vote weight"
@@ -2218,6 +2264,9 @@ msgstr ""
 msgid "Hide more text"
 msgstr ""
 
+msgid "Hide note on number of multiple contributions"
+msgstr ""
+
 msgid "Hide password"
 msgstr ""
 
@@ -2244,6 +2293,9 @@ msgid ""
 "OpenSlides server settings and cannot be changed here.\n"
 "                            To receive replies you have to enter a reply "
 "address in the next field. Please test the email dispatch in case of changes!"
+msgstr ""
+
+msgid "Identical motions"
 msgstr ""
 
 msgid "Identical with"
@@ -2781,6 +2833,9 @@ msgstr ""
 msgid "Motions"
 msgstr ""
 
+msgid "Motions (PDF settings)"
+msgstr ""
+
 msgid "Motions are in process. Please wait ..."
 msgstr ""
 
@@ -2824,9 +2879,6 @@ msgid "Name"
 msgstr ""
 
 msgid "Name of recommender"
-msgstr ""
-
-msgid "Name of recommender for statute amendments"
 msgstr ""
 
 msgid "Name of the new category"
@@ -3099,6 +3151,9 @@ msgstr ""
 msgid "Numbering"
 msgstr ""
 
+msgid "Numbering and sorting"
+msgstr ""
+
 msgid "Numbering prefix for agenda items"
 msgstr ""
 
@@ -3121,6 +3176,9 @@ msgid "One email was send sucessfully."
 msgstr ""
 
 msgid "Only for internal notes."
+msgstr ""
+
+msgid "Only groups and participant number are switched."
 msgstr ""
 
 msgid "Only main agenda items"
@@ -3166,6 +3224,14 @@ msgid "OpenSlides access data"
 msgstr ""
 
 msgid "OpenSlides help (FAQ)"
+msgstr ""
+
+msgid ""
+"OpenSlides offers various speaking list customizations for use in "
+"parliament. These include the configuration of speaking time quotas for "
+"parliamentary groups (e.g. fractions, coalitions) as well as extended types "
+"of speeches such as short interventions and (parliamentary) interposed "
+"questions."
 msgstr ""
 
 msgid "OpenSlides recommends"
@@ -3219,12 +3285,6 @@ msgstr ""
 msgid "PDF ballot paper logo"
 msgstr ""
 
-msgid "PDF export"
-msgstr ""
-
-msgid "PDF export options"
-msgstr ""
-
 msgid "PDF footer logo (left)"
 msgstr ""
 
@@ -3276,6 +3336,9 @@ msgstr ""
 msgid "Parent agenda item"
 msgstr ""
 
+msgid "Parliament options"
+msgstr ""
+
 msgid "Participant"
 msgstr ""
 
@@ -3319,6 +3382,9 @@ msgid "Participant removed from multiple groups in multiple meetings"
 msgstr ""
 
 msgid "Participants"
+msgstr ""
+
+msgid "Participants (PDF settings)"
 msgstr ""
 
 msgid ""
@@ -3500,9 +3566,6 @@ msgid "Projections"
 msgstr ""
 
 msgid "Projector"
-msgstr ""
-
-msgid "Projector and countdown"
 msgstr ""
 
 msgid "Projector h1"
@@ -3799,9 +3862,6 @@ msgstr ""
 msgid "Select all"
 msgstr ""
 
-msgid "Select exactly two participants to swap mandates"
-msgstr ""
-
 msgid "Select file"
 msgstr ""
 
@@ -3932,6 +3992,9 @@ msgid "Sets this projector as the reference for the current list of speakers"
 msgstr ""
 
 msgid "Settings"
+msgstr ""
+
+msgid "Short form for amendments"
 msgstr ""
 
 msgid "Show all"
@@ -4272,7 +4335,7 @@ msgstr ""
 msgid "Surname"
 msgstr ""
 
-msgid "Swap mandates ..."
+msgid "Swap mandates"
 msgstr ""
 
 msgid "Switch"
@@ -4359,7 +4422,7 @@ msgstr ""
 
 msgid ""
 "The maximum number of characters per line. Relevant when line numbering is "
-"enabled. Min: 40"
+"enabled. Min: 40. Note: Check PDF export and font."
 msgstr ""
 
 msgid "The number has to be greater than 0."
@@ -4435,6 +4498,9 @@ msgid "These accounts will be deleted:"
 msgstr ""
 
 msgid "These participants will be removed:"
+msgstr ""
+
+msgid "These settings are only applied locally on this device."
 msgstr ""
 
 msgid "This account has relations to meetings or committees"
@@ -4669,6 +4735,9 @@ msgstr ""
 msgid "Unknown participant"
 msgstr ""
 
+msgid "Unknown user"
+msgstr ""
+
 msgid "Unsaved changes will not be applied."
 msgstr ""
 
@@ -4703,6 +4772,9 @@ msgstr ""
 msgid "Used for invitation emails and QRCode in PDF of access data."
 msgstr ""
 
+msgid "User"
+msgstr ""
+
 msgid "User not found."
 msgstr ""
 
@@ -4729,6 +4801,9 @@ msgstr ""
 msgid "Valid votes"
 msgstr ""
 
+msgid "View"
+msgstr ""
+
 msgid "Virtual applause"
 msgstr ""
 
@@ -4739,6 +4814,9 @@ msgid "Visibility on agenda"
 msgstr ""
 
 msgid "Vote"
+msgstr ""
+
+msgid "Vote delegation"
 msgstr ""
 
 msgid "Vote submitted"
@@ -4753,7 +4831,7 @@ msgstr ""
 msgid "Votes"
 msgstr ""
 
-msgid "Voting and ballot papers"
+msgid "Voting"
 msgstr ""
 
 msgid "Voting anonymized"
@@ -4886,11 +4964,6 @@ msgid "Wifi name"
 msgstr ""
 
 msgid ""
-"Will be displayed as label before selected recommendation in statute "
-"amendments."
-msgstr ""
-
-msgid ""
 "Will be displayed as label before selected recommendation. Use an empty "
 "value to disable the recommendation system."
 msgstr ""
@@ -4905,9 +4978,6 @@ msgid "Workflow of new amendments"
 msgstr ""
 
 msgid "Workflow of new motions"
-msgstr ""
-
-msgid "Workflow of new statute amendments"
 msgstr ""
 
 msgid "Workflows"
@@ -5442,9 +5512,6 @@ msgid "Speaking time"
 msgstr ""
 
 msgid "Staff"
-msgstr ""
-
-msgid "Voting"
 msgstr ""
 
 msgid ""
